--- a/main2 flask/static/styles/styles.css
+++ b/main2 flask/static/styles/styles.css
@@ -71,7 +71,7 @@ button:hover, input[type="submit"]:hover {
 
     form {
         width: 90%;
-        margin: 250px auto 100px auto;;
+        margin: 125px auto 100px auto;
     }
 
     .row input[type="text"], .row input[type="number"] {
@@ -111,4 +111,17 @@ button:hover, input[type="submit"]:hover {
     div#result li {
         margin: 30px 0;
     }
+
+    #buttons{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-top: 125px;
+    }
+
+    div#buttons button {
+        margin: 19px;
+        width: 40%;
+    }
+
 }
