bug fix: it now supports cents.

--- a/main2 flask/templates/index.html
+++ b/main2 flask/templates/index.html
@@ -20,7 +20,7 @@
     <div id="rows">
         <div class="row">
             <input type="text" name="names_expenses[]" placeholder="Enter name">
-            <input type="number" name="names_expenses[]" placeholder="Enter expense">
+            <input type="number" step="0.01" min=0 name="names_expenses[]" placeholder="Enter expense">
         </div>
     </div>
     <div id="action-buttons">
